--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
         <div id="cnt1" class="cnt-row">
           <div class="left_cnt">0</div>
           <div class="left_per">0%</div>
-          <div class="sub-title">배팅1</div>
+          <div class="sub-title">스트라이크/볼</div>
           <div class="right_per">0%</div>
           <div class="right_cnt">0</div>
         </div>
         <div id="cnt2" class="cnt-row">
           <div class="left_cnt">0</div>
           <div class="left_per">0%</div>
-          <div class="sub-title">배팅2</div>
+          <div class="sub-title">좌측/우측</div>
           <div class="right_per">0%</div>
           <div class="right_cnt">0</div>
         </div>
         <div id="cnt3" class="cnt-row">
           <div class="left_cnt">0</div>
           <div class="left_per">0%</div>
-          <div class="sub-title">배팅3</div>
+          <div class="sub-title">직구/변화구</div>
           <div class="right_per">0%</div>
           <div class="right_cnt">0</div>
         </div>
         <div id="cnt4" class="cnt-row">
           <div class="left_cnt">0</div>
           <div class="left_per">0%</div>
-          <div class="sub-title">배팅4</div>
+          <div class="sub-title">하단/상단</div>
           <div class="right_per">0%</div>
           <div class="right_cnt">0</div>
         </div>
